# xaimoo-experiments

./: .gitignore  pyproject.toml
data/: TwoBarTruss.csv  VehicleCrash.csv  WeldedBeam.csv
notebooks/: Rule_showcase.ipynb  TwoBarTruss_classification.ipynb  VehicleCrash_classification.ipynb  WeldedBeam_classification.ipynb  building_data.ipynb  two_bar_truss.ipynb  two_bar_truss_old.ipynb
utilities/: data.py
xaimoo/explanations/: __init__.py  rules.py
xaimoo/utilities/: __init__.py  data.py  visualize.py
