[tool.poetry]
name = "xaimoo-experiments"
version = "0.1.0"
description = ""
authors = ["Giovanni Misitano <giovanni.a.misitano@jyu.fi>"]
license = "MIT"
readme = "README.md"
packages = [{include = "xaimoo_experiments"}]

[tool.poetry.dependencies]
python = "^3.8, <3.12"
numpy = "^1.24.1"
matplotlib = "^3.6.3"
pandas = "^1.5.3"
scipy = "^1.10.0"
jupyterlab = "^3.5.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
