[tool.poetry]
name = "xaimoo-experiments"
version = "0.1.0"
description = ""
authors = ["Giovanni Misitano <giovanni.a.misitano@jyu.fi>"]
license = "MIT"
readme = "README.md"
packages = [{include = "xaimoo_experiments"}]

[tool.poetry.dependencies]
python = "^3.9, <3.11"
numpy = "<1.24"
matplotlib = "^3.6.3"
pandas = "^1.5.3"
scipy = "^1.10.0"
jupyterlab = "^3.5.3"
imodels = "^1.3.14"
desdeo-tools = "^1.7.3"
graphviz = "^0.20.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
